# Team-17-Project

./: .gitignore  .mailmap  CHANGES  HACKING  LICENSE  README  README.md  package.json  pnpm-lock.yaml  pyproject.toml  settings.gradle.kts  vercel.json
.github/: README.md
api/: pyproject.toml  requirements.uv.txt  wsgi.py
api/clubradar/: __init__.py  __main__.py
api/lib/app/: __init__.py  __main__.py  db.sqlite3
api/pkg/clubradar/: __init__.py
api/var/: 0000-init.sql
api/vercel/: __init__.py
app/: build.gradle.kts  pyproject.toml
app/src/androidTest/java/com/endfindme/team/sdc_fa25/mytaskapp/: ExampleInstrumentedTest.kt
app/src/main/java/com/endfindme/team/sdc_fa25/mytaskapp/: MainActivity.kt
app/src/main/java/com/endfindme/team/sdc_fa25/mytaskapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/endfindme/team/sdc_fa25/mytaskapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
hooks/: LINK.PL  install  pre-commit
lib/cvmc/: __init__.py  __main__.py
scripts/: poe2txt.py
t/: corepack.t  cpanfile  version.t
t/lib/MY/: CatFile.pm
web/: README.OLD  README.md  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: app.css
web/src/lib/debug/: Console.svelte
web/src/lib/etc/: env.ts
web/src/lib/mod/: Search.svelte
web/src/lib/sub/: search.ts
web/src/routes/: +layout.svelte
