[project]
name = "minecraft-cv"
version = "0.0.0"
description = "Minecraft with OpenCV"
authors = [
    {name = "Ethan Meng",email = "uwisc@endfind.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]

[tool.poetry]
packages = [{include = "cvmc", from = "lib"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
