[project]
name = "wisc-club-radar-app"
version = "0.0.0"
description = "club radar api backend"
authors = [
    {name = "Ethan Meng",email = "uwisc@endfind.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "lib"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
